--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -25,8 +25,9 @@
             minlength="3"
             maxlength="20"
             #username="ngModel"
+            (input)="serverErrors.username = null"
           />
-          <div class="alert-danger" *ngIf="username.errors && f.submitted">
+          <div class="alert-danger" *ngIf="(username.errors && f.submitted) || serverErrors.username">
             <div *ngIf="username?.errors?.['required']">Username is required</div>
             <div *ngIf="username?.errors?.['minlength']">
               Username must be at least 3 characters
@@ -34,6 +35,9 @@
             <div *ngIf="username?.errors?.['maxlength']">
               Username must be at most 20 characters
             </div>
+            <ng-container *ngIf="serverErrors.username">
+              <div *ngFor="let error of serverErrors.username;">{{ error }}</div>
+            </ng-container>
           </div>
         </div>
         <div class="form-group">
@@ -46,12 +50,16 @@
             required
             email
             #email="ngModel"
+            (input)="serverErrors.email = null"
           />
-          <div class="alert-danger" *ngIf="email.errors && f.submitted">
+          <div class="alert-danger" *ngIf="(email.errors && f.submitted) || serverErrors.email">
             <div *ngIf="email?.errors?.['required']">Email is required</div>
             <div *ngIf="email?.errors?.['email']">
               Email must be a valid email address
             </div>
+            <ng-container *ngIf="serverErrors.email">
+              <div *ngFor="let error of serverErrors.email;">{{ error }}</div>
+            </ng-container>
           </div>
         </div>
         <div class="form-group">
@@ -64,12 +72,16 @@
             required
             minlength="6"
             #password="ngModel"
+            (input)="serverErrors.password = null"
           />
-          <div class="alert-danger" *ngIf="password.errors && f.submitted">
+          <div class="alert-danger" *ngIf="(password.errors && f.submitted) || serverErrors.password">
             <div *ngIf="password?.errors?.['required']">Password is required</div>
             <div *ngIf="password?.errors?.['minlength']">
               Password must be at least 6 characters
             </div>
+            <ng-container *ngIf="serverErrors.password">
+              <div *ngFor="let error of serverErrors.password;">{{ error }}</div>
+            </ng-container>
           </div>
         </div>
         <div class="form-group">
