Commented out scroll container for posts and relocated link to creating posts

--- a/frontend/src/app/post-list/post-list.component.css
+++ b/frontend/src/app/post-list/post-list.component.css
@@ -1,8 +1,4 @@
-#thread-list {
-    height: 20vh;
-}
-
-#btn-post-thread {
-    height: 10%;
-    width: 100%;
-}
+/* #thread-list {
+    height: 38em;
+    overflow: auto;
+} */
