--- a/frontend/src/app/post-list/post-list.component.html
+++ b/frontend/src/app/post-list/post-list.component.html
@@ -1,10 +1,8 @@
 <h2>Posts</h2>
-
-<section id="thread-list"></section>
-<button id="btn-post-thread" onclick="postThread()">Post thread</button>
-
+<!-- <section id="thread-list"> -->
 <a *ngFor="let post of posts" routerLink="posts/{{ post.id }}">
     <div style="padding: 5px; margin: 10px; border: black solid 1px; border-radius: 5px;">
         {{post.title}}
     </div>
 </a>
+<!-- </section> -->
