--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="isLoggedIn" routerLink="post-creation">Create post</a>
+      </li>
     </ul>
 
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
