Added code for working on image uploading

--- a/frontend/src/app/post-creation/post-creation.component.html
+++ b/frontend/src/app/post-creation/post-creation.component.html
@@ -7,58 +7,62 @@ name="form"
 #f="ngForm"
 novalidate
 >
+  <div class="plain-row">
     <label for="post-title">Title:</label>
-    <input
-    id="post-title"
-    type="text"
-    class="form-control"
-    name="title"
-    [(ngModel)]="form.title"
-    required
-    minlength="1"
-    maxlength="200"
-    #title="ngModel"
-    (input)="serverErrors.title = null">
-    <div class="alert-danger" *ngIf="(title.errors && f.submitted) || serverErrors.title">
-      <div *ngIf="title?.errors?.['required']">title is required</div>
-      <div *ngIf="title?.errors?.['minlength']">
-        title must be at least 1 character
-      </div>
-      <div *ngIf="title?.errors?.['maxlength']">
-        title must be at most 200 characters
-      </div>
-      <ng-container *ngIf="serverErrors.title">
-        <div *ngFor="let error of serverErrors.title;">{{ error }}</div>
-      </ng-container>
+    <div style="margin-left: auto;" class="plain-row">
+        <label>Image attachment: </label>
+        <input
+        id="btn-browse-images"
+        type="file"
+        name="image"
+        [(ngModel)]="form.image"
+        (change)="fileSelect($event)"
+        #image="ngModel">
     </div>
+  </div>
+  <input
+  id="post-title"
+  type="text"
+  class="form-control"
+  name="title"
+  [(ngModel)]="form.title"
+  required
+  minlength="1"
+  maxlength="200"
+  #title="ngModel"
+  (input)="serverErrors.title = null">
+  <div class="alert-danger" *ngIf="(title.errors && f.submitted) || serverErrors.title">
+    <div *ngIf="title?.errors?.['required']">title is required</div>
+    <div *ngIf="title?.errors?.['minlength']">
+      title must be at least 1 character
+    </div>
+    <div *ngIf="title?.errors?.['maxlength']">
+      title must be at most 200 characters
+    </div>
+    <ng-container *ngIf="serverErrors.title">
+      <div *ngFor="let error of serverErrors.title;">{{ error }}</div>
+    </ng-container>
+  </div>
 
-    <div style="margin-top: 2vh;" class="plain-row">
-        <label for="post-body">Content:</label>
-        <div style="margin-left: auto; margin-top: 2vh;" class="plain-row">
-            <label>Image attachment: </label>
-            <input
-            style="display: none"
-            type="file"
-            #fileInput>
-            <button (click)="fileInput.click()" id="btn-browse-images">Browse</button>
-        </div>
-    </div>
-    <textarea
-    id="post-body"
-    type="text"
-    class="form-control"
-    name="body"
-    [(ngModel)]="form.body"
-    required
-    minlength="1"
-    maxlength="20000"
-    #body="ngModel"
-    (input)="serverErrors.body = null"></textarea>
+  <div style="margin-top: 2vh;" class="plain-row">
+      <label for="post-body">Content:</label>
+  </div>
+  <textarea
+  id="post-body"
+  type="text"
+  class="form-control"
+  name="body"
+  [(ngModel)]="form.body"
+  required
+  minlength="1"
+  maxlength="20000"
+  #body="ngModel"
+  (input)="serverErrors.body = null"></textarea>
 
-    <button style="margin-top: 2vh;" id="btn-submit-post">Submit post</button>
-    <div class="alert alert-warning" *ngIf="f.submitted && isSubmitPostFailed">
-        Post upload failed!<br />{{ errorMessage }}
-    </div>
+  <button style="margin-top: 2vh;" id="btn-submit-post">Submit post</button>
+  <div class="alert alert-warning" *ngIf="f.submitted && isSubmitPostFailed">
+      Post upload failed!<br />{{ errorMessage }}
+  </div>
 </form>
 
 <div class="alert alert-success" *ngIf="isSuccessful">
