--- a/frontend/src/app/post-list/post-list.component.css
+++ b/frontend/src/app/post-list/post-list.component.css
@@ -2,3 +2,11 @@
     height: 38em;
     overflow: auto;
 } */
+
+a > div {
+    padding: 5px;
+    margin: 10px;
+    border: black solid 1px;
+    border-radius: 5px;
+    white-space: pre-wrap;
+}
