--- a/frontend/src/app/post/post.component.css
+++ b/frontend/src/app/post/post.component.css
@@ -1,3 +1,28 @@
 p {
     white-space: pre-wrap;
+    border-style: solid;
+    border-width: thin;
+}
+
+h2, h4 {
+    border-bottom-style: solid;
+    border-width: thin;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section {
+    min-height: 7vh;
+}
+
+form {
+    display: block;
+    margin-top: auto;
+}
+button {
+    width: 100%;
 }
