--- a/frontend/src/app/post/post.component.css
+++ b/frontend/src/app/post/post.component.css
@@ -2,6 +2,8 @@ p {
     white-space: pre-wrap;
     border-style: solid;
     border-width: thin;
+    padding: 1vw;
+    background-color: rgb(255, 255, 255);
 }
 
 h2, h4 {
@@ -10,9 +12,10 @@ h2, h4 {
 }
 
 img {
-    display: block;
+    object-fit: cover;
+    /* display: block;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
 }
 
 section {
@@ -25,4 +28,18 @@ form {
 }
 button {
     width: 100%;
+}
+
+.btn-edit {
+    background-image: linear-gradient(-180deg, rgba(24, 26, 27, 0.09) 0%, rgba(151, 0, 0, 0.1) 97%);
+    border-color: rgba(26, 46, 138, 0.5);
+    color: rgb(76, 97, 216);
+    /* color: #648aa4 */
+    background-color: rgb(24, 26, 27);
+}
+.btn-delete {
+    background-image: linear-gradient(-180deg, rgba(24, 26, 27, 0.09) 0%, rgba(151, 0, 0, 0.1) 97%);
+    border-color: rgba(138, 83, 26, 0.5);
+    color: rgb(216, 97, 76);
+    background-color: rgb(24, 26, 27);
 }
