frontend: Added a little HTML for user details

--- a/frontend/src/app/user-details/user-details.component.html
+++ b/frontend/src/app/user-details/user-details.component.html
@@ -1,1 +1,9 @@
-<p>user-details works!</p>
+<h2>User: </h2>
+<hr>
+<h4>Posts:</h4>
+
+<!-- <a *ngFor="let userPost of userPosts" routerLink="posts/{{ userPost.id }}">
+    <div>
+        {{ post.title }}
+    </div>
+</a> -->
