frontend: Added margins to labels and checkbox

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -72,6 +72,7 @@
         <div class="form-group">
           <label>
             <input
+              id="remember-me-checkbox"
               type="checkbox"
               name="remember-me"
               [(ngModel)]="form.remember"
