--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -7,13 +7,13 @@
     margin-top: 2em;
 }
 
-.usernameLabel {
-    margin-right: 2%;
-}
-.passwordLabel {
-    margin-right: 2.25%;
-}
-
 #btn-login {
     width: 4em;
+}
+
+label {
+    margin-left: 1.3vw;
+}
+#remember-me-checkbox {
+    margin-left: 2vw;
 }
