--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="form-group">
-          <button class="btn btn-primary btn-block">Sign Up</button>
+          <button class="btn-block">Sign Up</button>
         </div>
 
         <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
