--- a/frontend/src/app/post/post.component.css
+++ b/frontend/src/app/post/post.component.css
@@ -13,9 +13,8 @@ h2, h4 {
 
 img {
     object-fit: cover;
-    /* display: block;
-    margin-left: auto;
-    margin-right: auto; */
+    height: 100%;
+    width: 100%;
 }
 
 section {
