--- a/frontend/src/app/post-creation/post-creation.component.css
+++ b/frontend/src/app/post-creation/post-creation.component.css
@@ -23,6 +23,9 @@ label {
     font-size: 1rem;
 }
 
+input[type="file"] {
+    display: none;
+}
 #btn-browse-images {
     height: fit-content;
     font-size: 0.8rem;
