--- a/frontend/src/app/post/post.component.html
+++ b/frontend/src/app/post/post.component.html
@@ -1,87 +1,81 @@
-<ng-container *ngIf="!!post; else noPost">
-    <img [src]="image" onerror="this.style.display='none'">
+<div class="alert alert-success" *ngIf="postDeletionIsSuccessful">
+    <!-- TODO: get author of deleted post to the deletion alert message -->
+    The post{{ post && post.title ? (' "' + post.title + '"' + (user && user.name ? ' by "' + user.name + '"' : '') ) : '' }} was successfully deleted!
+</div>
+<ng-container *ngIf="!postDeletionIsSuccessful">
+    <ng-container *ngIf="!!post; else noPost">
 
-    <form name="post-controls" (ngSubmit)="deletePost()"><button (click)="deletePost()">Delete post</button>
-        <div class="alert alert-warning" *ngIf="f.submitted && isPostDeletionFailed">
-            Post deletion failed!<br />{{ postCommentErrorMessage }}
-        </div>
-        <div class="alert alert-success" *ngIf="postDeletionIsSuccessful">
-            Your post deletion is successful!
-        </div>
-    </form>
-
-    <h2>{{ post?.title }}</h2>
-    <p>{{ post?.body }}</p>
-</ng-container>
-
-<ng-template #noPost>
-    <h3 *ngIf="!isLoadingPost; else loadingPost">Sorry, but this post doesn't exist.</h3>
-</ng-template>
-
-<ng-template #loadingPost>
-    <h3>Loading Post...</h3>
-</ng-template>
-
-
-<hr>
-<h4>Comment Section</h4>
-<section>
-    <ng-container *ngFor="let postComment of postComments">
-        <div class="plain-row flex-content-to-the-right margin-above">
-            <button (click)="deleteComment(postComment)">Delete</button>
-        </div>
-        <p>{{ postComment?.content }}</p>
-        <div class="plain-row flex-content-to-the-right margin-below">
-            <div class="likes {{ postComment?.opinion === 'liked' ? 'active' : '' }}">
-                <button (click)="likeComment(postComment)"><span>{{ postComment?.likes }}</span> Like</button>
+        <form name="post-controls" class="{{ (isAdmin || post?.user_id === user?.id) ? '' : 'hidden' }}"
+            (ngSubmit)="deletePost()"><button (click)="deletePost()">Delete post</button>
+            <div class="alert alert-warning" *ngIf="f.submitted && isPostDeletionFailed">
+                Post deletion failed!<br />{{ postDeletionErrorMessage }}
             </div>
-            <div class="dislikes {{ postComment?.opinion === 'disliked' ? 'active' : '' }}">
-                <button (click)="dislikeComment(postComment)"><span>{{ postComment?.dislikes }}</span> Dislike</button>
-            </div>
-        </div>
+        </form>
+
+        <img [src]="image" class="hidden" onload="this.classList.remove('hidden')">
+
+        <h2>{{ post?.title }}</h2>
+        <p>{{ post?.body }}</p>
     </ng-container>
 
-    <ng-template #noComments>
-        <h6 *ngIf="!isLoadingPostComments; else loadingComments">No comments.</h6>
+    <ng-template #noPost>
+        <h3 *ngIf="!isLoadingPost; else loadingPost">Sorry, but this post doesn't exist.</h3>
     </ng-template>
 
-    <ng-template #loadingComments>
-        <h5>Loading Comments...</h5>
+    <ng-template #loadingPost>
+        <h3>Loading Post...</h3>
     </ng-template>
-</section>
 
-<form
-name="form"
-(ngSubmit)="f.form.valid && onSubmit()"
-#f="ngForm"
-novalidate
->
-    <textarea
-    id="post-comment"
-    type="text"
-    class="form-control"
-    name="content"
-    [(ngModel)]="form.content"
-    required
-    maxlength="512"
-    #content="ngModel"
-    (input)="postCommentServerErrors.content = null"></textarea>
-    <div class="alert-danger" *ngIf="(content.errors && f.submitted) || postCommentServerErrors.content">
-        <div *ngIf="content?.errors?.['required'] && isSubmitCommentFailed">Content is required</div>
-        <div *ngIf="content?.errors?.['maxlength']">
-            Comment must be at most 512 characters
-        </div>
-        <ng-container *ngIf="postCommentServerErrors.content">
-        <div *ngFor="let error of postCommentServerErrors.content;">{{ error }}</div>
+
+    <hr>
+    <h4>Comment Section</h4>
+    <section>
+        <ng-container *ngFor="let postComment of postComments">
+            <div class="plain-row margin-above">
+                <!-- TODO: get the respective author's username from the users table connected by the user ids in the post comments table -->
+                <span class="margin-right-of">{{ postComment?.user_id }}</span>
+                <button class="margin-left-of {{ (isAdmin || postComment?.user_id === user?.id) ? '' : 'hidden' }}" (click)="deleteComment(postComment)">Delete</button>
+            </div>
+            <p>{{ postComment?.content }}</p>
+            <div class="plain-row flex-content-to-the-right margin-below">
+                <div class="likes {{ postComment?.opinion === 'liked' ? 'active' : '' }}">
+                    <button (click)="likeComment(postComment)"><span>{{ postComment?.likes }}</span> Like</button>
+                </div>
+                <div class="dislikes {{ postComment?.opinion === 'disliked' ? 'active' : '' }}">
+                    <button (click)="dislikeComment(postComment)"><span>{{ postComment?.dislikes }}</span> Dislike</button>
+                </div>
+            </div>
         </ng-container>
-    </div>
 
-    <div class="alert alert-warning" *ngIf="f.submitted && isSubmitCommentFailed">
-        Comment upload failed!<br />{{ postCommentErrorMessage }}
-    </div>
-    <div class="alert alert-success" *ngIf="postCommentUploadIsSuccessful">
-        Your post comment upload is successful!
-    </div>
+        <ng-container *ngIf="postComments.length === 0">
+            <h6 *ngIf="!isLoadingPostComments; else loadingComments">No comments.</h6>
+        </ng-container>
 
-    <button style="margin-top: 2vh;" id="btn-submit-post">Submit comment</button>
-</form>
+        <ng-template #loadingComments>
+            <h5>Loading Comments...</h5>
+        </ng-template>
+    </section>
+
+    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+        <textarea id="post-comment" type="text" class="form-control" name="content" [(ngModel)]="form.content" required
+            maxlength="512" #content="ngModel" (input)="postCommentServerErrors.content = null"></textarea>
+        <div class="alert-danger" *ngIf="(content.errors && f.submitted) || postCommentServerErrors.content">
+            <div *ngIf="content?.errors?.['required'] && isSubmitCommentFailed">Content is required</div>
+            <div *ngIf="content?.errors?.['maxlength']">
+                Comment must be at most 512 characters
+            </div>
+            <ng-container *ngIf="postCommentServerErrors.content">
+                <div *ngFor="let error of postCommentServerErrors.content;">{{ error }}</div>
+            </ng-container>
+        </div>
+
+        <div class="alert alert-warning" *ngIf="f.submitted && isSubmitCommentFailed">
+            Comment upload failed!<br />{{ postCommentErrorMessage }}
+        </div>
+        <div class="alert alert-success" *ngIf="postCommentUploadIsSuccessful">
+            Your post comment upload is successful!
+        </div>
+
+        <button style="margin-top: 2vh;" id="btn-submit-post">Submit comment</button>
+    </form>
+</ng-container>
